@@ -67,6 +67,9 @@ cronQueries=true
 dontSaveBPFs=port 12345
 webBasePath = /moloch/
 esAdminUsers=admin
+businessDayStart=9
+businessDayEnd=17
+businessDays=1,2,3,4,5
 
 [testmulties]
 pcapWriteMethod=simple
