@@ -9449,7 +9449,10 @@ app.use(cspHeader, setCookie, (req, res) => {
     huntWarn: Config.get('huntWarn', 100000),
     huntLimit: limit,
     serverNonce: res.locals.nonce,
-    anonymousMode: !!app.locals.noPasswordSecret && !Config.get('regressionTests', false)
+    anonymousMode: !!app.locals.noPasswordSecret && !Config.get('regressionTests', false),
+    businesDayStart: Config.get('businessDayStart', false),
+    businessDayEnd: Config.get('businessDayEnd', false),
+    businessDays: Config.get('businessDays', '1,2,3,4,5')
   };
 
   // Create a fresh Vue app instance
