@@ -19,6 +19,9 @@
       const MOLOCH_HUNTWARN = {{ huntWarn }};
       const MOLOCH_HUNTLIMIT = {{ huntLimit }};
       const MOLOCH_ANONYMOUS_MODE = {{ anonymousMode }};
+      const MOLOCH_BUSINESS_DAY_START = {{ businesDayStart }};
+      const MOLOCH_BUSINESS_DAY_END = {{ businessDayEnd }};
+      const MOLOCH_BUSINESS_DAYS = '{{ businessDays }}';
     </script>
   </head>
   <body class="{{ theme }}">
