@@ -63,7 +63,10 @@ new Vue({
       MOLOCH_MULTIVIEWER: MOLOCH_MULTIVIEWER,
       MOLOCH_HUNTWARN: MOLOCH_HUNTWARN,
       MOLOCH_HUNTLIMIT: MOLOCH_HUNTLIMIT,
-      MOLOCH_ANONYMOUS_MODE: MOLOCH_ANONYMOUS_MODE
+      MOLOCH_ANONYMOUS_MODE: MOLOCH_ANONYMOUS_MODE,
+      MOLOCH_BUSINESS_DAY_START: MOLOCH_BUSINESS_DAY_START,
+      MOLOCH_BUSINESS_DAY_END: MOLOCH_BUSINESS_DAY_END,
+      MOLOCH_BUSINESS_DAYS: MOLOCH_BUSINESS_DAYS
     };
   }
 });
